Implement Cache and Api Call Implementation

--- a/src/CurrencyConverter.Api/appsettings.json
+++ b/src/CurrencyConverter.Api/appsettings.json
@@ -1,9 +1,28 @@
 {
+  "Jwt": {
+    "Key": "your-secure-key-here-32-characters-long",
+    "Issuer": "CurrencyConverterApi",
+    "Audience": "CurrencyConverterApi"
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379"
+  },
+  "Seq": {
+    "Url": "http://localhost:5341"
+  },
+  "RateLimiting": {
+    "PermitLimit": 100,
+    "Window": 60,
+    "QueueLimit": 10
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Frankfurter": {
+    "BaseUrl": "https://api.frankfurter.dev/v1/"
   },
   "AllowedHosts": "*"
 }
