--- a/src/CurrencyConverter.Infrastructure/CurrencyConverter.Infrastructure.csproj
+++ b/src/CurrencyConverter.Infrastructure/CurrencyConverter.Infrastructure.csproj
@@ -7,11 +7,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Caching\" />
       <Folder Include="Logging\" />
-      <Folder Include="Providers\" />
       <Folder Include="Repositories\" />
       <Folder Include="Tracing\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.10.0" />
+      <PackageReference Include="StackExchange.Redis" Version="2.8.41" />
+      <PackageReference Include="System.Net.Http.Json" Version="8.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CurrencyConverter.Domain\CurrencyConverter.Domain.csproj" />
     </ItemGroup>
 
 </Project>
