Code Refactor and Unit Test

--- a/src/CurrencyConverter.Api/appsettings.json
+++ b/src/CurrencyConverter.Api/appsettings.json
@@ -24,5 +24,8 @@
   "Frankfurter": {
     "BaseUrl": "https://api.frankfurter.dev/v1/"
   },
+  "CurrencyProvider": {
+    "ActiveProvider": "Frankfurter"
+  },
   "AllowedHosts": "*"
 }
